# image-processing

./: .gitignore  CMakeLists.txt
doc/: Doxyfile  image-processing.bib
source/: CMakeLists.txt  color_transfer.cpp
source/include/: color_transfer.hpp
test/: CMakeLists.txt  test_color_transfer.cpp
